syntax = "proto3";
package song.v1;
option go_package = "github.com/Temutjin2k/Tyndau/music-service/api/song/v1;songv1";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

message Song {
  int64  id            = 1;
  string title         = 2;
  string artist        = 3;
  string album         = 4;
  string genre         = 5;
  int32  duration_sec  = 6;
  string file_url      = 7;
  google.protobuf.Timestamp released_at = 8;
}

message CreateSongRequest { Song song = 1; }
message GetSongRequest    { int64 id = 1; }
message ListSongsRequest  { int32 limit = 1; int32 offset = 2; }
message ListSongsResponse { repeated Song songs = 1; }
message UpdateSongRequest { Song song = 1; }
message DeleteSongRequest { int64 id = 1; }

service SongService {
  rpc CreateSong (CreateSongRequest) returns (Song);
  rpc GetSong    (GetSongRequest)    returns (Song);
  rpc ListSongs  (ListSongsRequest)  returns (ListSongsResponse);
  rpc UpdateSong (UpdateSongRequest) returns (google.protobuf.Empty);
  rpc DeleteSong (DeleteSongRequest) returns (google.protobuf.Empty);
}
